<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.kotlinhandson.MainActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:id="@+id/imageview"
            android:src="@drawable/poster"/>

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/up"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintBottom_toTopOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="@id/textView"
            android:src="@drawable/up"
            android:layout_marginBottom="24dp"
            app:layout_constraintHorizontal_bias="0.393"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/hello_world_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:id="@+id/textView2"
            android:text="@string/attendees"
            android:textAlignment="center"
            android:textColor="@color/screenBackground"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toastMe"
            android:text="@string/toast"
            android:layout_marginStart="85dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="50dp"
            android:background="@color/buttonBackground"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:onClick="countMe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/button2"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_marginEnd="8dp"
            android:background="@color/buttonBackground"
            app:layout_constraintLeft_toRightOf="@id/button4"
            />

    <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blink"
            android:onClick="blinkMe"
            android:layout_marginEnd="8dp"
            app:layout_constraintLeft_toLeftOf="@id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            android:background="@color/buttonBackground"
            app:layout_constraintTop_toBottomOf="@+id/button" />


    <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:onClick="randomMe"
            android:layout_marginStart="48dp"
            app:layout_constraintRight_toRightOf="@id/button3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button4"
            android:layout_marginTop="50dp"
            android:background="@color/buttonBackground"
            app:layout_constraintTop_toBottomOf="@+id/textView" />



</android.support.constraint.ConstraintLayout>